--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "vibesec-mcp"
+name = "vibesec"
 main = "dist-cf/src/mcp/cloudflare-worker.js"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
