fix: Correct CI workflow to use proper test and CLI commands
- Use 'bun run test' instead of 'bun test' to run Jest tests
- Update test-install job to run built CLI from dist/ directory
- Fixes automation failures in CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Run linter
         run: bun run lint
 
-      - name: Run tests
-        run: bun test
+       - name: Run tests
+         run: bun run test
 
       - name: Build
         run: bun run build
@@ -53,7 +53,7 @@ jobs:
       - name: Build
         run: bun run build
 
-      - name: Test CLI runs
-        run: |
-          bun run cli/index.ts --version
-          bun run cli/index.ts scan --help
+       - name: Test CLI runs
+         run: |
+           node dist/cli/index.js --version
+           node dist/cli/index.js scan --help
