--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,26 +12,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        bun-version: ['1.0', 'latest']
+        node-version: [18.x, 20.x, 22.x]
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          bun-version: ${{ matrix.bun-version }}
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: bun install
+        run: npm ci
 
       - name: Run linter
-        run: bun run lint
+        run: npm run lint
 
       - name: Run tests
-        run: bun run test
+        run: npm test
 
       - name: Build
-        run: bun run build
+        run: npm run build
 
       - name: Check build artifacts
         run: |
@@ -44,14 +44,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
       - name: Install dependencies
-        run: bun install
+        run: npm ci
 
       - name: Build
-        run: bun run build
+        run: npm run build
 
       - name: Test CLI runs
         run: |
